Settings: Allow to hide arrow for back gesture [2/2]
Change-Id: Ia80629c65ff790f949210c88c9720ae0102a56ec
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>

--- a/res/values/ex_strings.xml
+++ b/res/values/ex_strings.xml
@@ -208,4 +208,7 @@
     <!-- Pocket judge -->
     <string name="pocket_judge_title">Pocket detection</string>
     <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
+
+    <!-- Back gesture animation -->
+    <string name="back_gesture_arrow_message">Show an animated arrow for back gesture.</string>
 </resources>
