--- a/res/values/ex_strings.xml
+++ b/res/values/ex_strings.xml
@@ -98,6 +98,8 @@
     <string name="designer4_description">Extensions UI, Icons</string>
     <string name="designer_5">Gaurav (allstargaurav)</string>
     <string name="designer5_description">Extensions UI, Icons and Clock styles</string>
+    <string name="designer_6">AndroBuddy007</string>
+    <string name="designer6_description">Bootanimation, Thread Banners</string>
     <string name="maintainers">Maintainers</string>
     <string name="maintainers_title">Official maintainers</string>
     <string name="maintainers_summary">Officially supported devices and their respective maintainers.</string>
